WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
99073
[Qt] GraphicsContextPlatformPrivate is leaking it's ShadowBlur
https://bugs.webkit.org/show_bug.cgi?id=99073
Summary
[Qt] GraphicsContextPlatformPrivate is leaking it's ShadowBlur
Balazs Kelemen
Reported
2012-10-11 07:37:13 PDT
I was wondering how can WebKitTestRunner eat GB's of memory and started checking memory usage with valgrind. I'm not sure yet that this will fix everything but at least this is a pretty trivial memory leak so let's fix it.
Attachments
Patch
(1.71 KB, patch)
2012-10-11 07:44 PDT
,
Balazs Kelemen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Balazs Kelemen
Comment 1
2012-10-11 07:44:13 PDT
Created
attachment 168226
[details]
Patch
Balazs Kelemen
Comment 2
2012-10-11 08:33:06 PDT
Comment on
attachment 168226
[details]
Patch Clearing flags on attachment: 168226 Committed
r131065
: <
http://trac.webkit.org/changeset/131065
>
Balazs Kelemen
Comment 3
2012-10-11 08:33:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug