[Qt] GraphicsContextPlatformPrivate is leaking it's ShadowBlur https://bugs.webkit.org/show_bug.cgi?id=99073

Reviewed by Noam Rosenthal.

Stop leaking GraphicsContextPlatformPrivate::shadow.

No change in behavior so no new tests.

* platform/graphics/qt/GraphicsContextQt.cpp:
(WebCore::GraphicsContextPlatformPrivate::~GraphicsContextPlatformPrivate):
Always destroy shadow. It is obviously owned by the context so it has
nothing to do with the erly return.

git-svn-id: svn://svn.chromium.org/blink/trunk@131065 bbb929c8-8fbe-4397-9dbb-9b2b20218538