third_party/WebKit/Source/WebCore/platform/graphics/qt/GraphicsContextQt.cpp
@@ -284,12 +284,13 @@ GraphicsContextPlatformPrivate::GraphicsContextPlatformPrivate(QPainter* p, cons
 
 GraphicsContextPlatformPrivate::~GraphicsContextPlatformPrivate()
 {
+    delete shadow;
+
     if (!platformContextIsOwned)
         return;
 
     QPaintDevice* device = painter->device();
     painter->end();
-    delete shadow;
     delete painter;
     delete device;
 }
